Bug 718752 - Only apply read only checks in save mode for Vista+ file pickers. r=bbondy